Created Get user details API and Update user feedback API. Added swagger documentation for APIs
