# server/app/auth.go
@@ -2,6 +2,7 @@ package app
 
 import (
 	"context"
+	"csat/helpers"
 	"csat/models"
 	u "csat/utils"
 	"net/http"
@@ -15,8 +16,15 @@ var JwtAuthentication = func(next http.Handler) http.Handler {
 
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 
-		notAuth := []string{"/api/user/new", "/api/user/login"}
+		notAuth := []string{"/csat/rest/api/user/new", "/csat/rest/api/user/login", "/swagger/"}
 		requestPath := r.URL.Path
+
+		// Check if the request is made from Swagger UI
+		referer := r.Header.Get("Referer")
+		if strings.Contains(referer, "/swagger/index.html") {
+			next.ServeHTTP(w, r)
+			return
+		}
 
 		for _, value := range notAuth {
 
@@ -30,7 +38,7 @@ var JwtAuthentication = func(next http.Handler) http.Handler {
 		tokenHeader := r.Header.Get("Authorization")
 
 		if tokenHeader == "" {
-			response = u.Message(false, "Missing auth token")
+			response = u.Message(false, constants.TOKEN_MISSING)
 			w.WriteHeader(http.StatusForbidden)
 			w.Header().Add("Content-Type", "application/json")
 			u.Respond(w, response)
@@ -39,7 +47,7 @@ var JwtAuthentication = func(next http.Handler) http.Handler {
 
 		splitted := strings.Split(tokenHeader, " ")
 		if len(splitted) != 2 {
-			response = u.Message(false, "Invalid/Malformed auth token")
+			response = u.Message(false, constants.TOKEN_INVALID)
 			w.WriteHeader(http.StatusForbidden)
 			w.Header().Add("Content-Type", "application/json")
 			u.Respond(w, response)
@@ -54,7 +62,7 @@ var JwtAuthentication = func(next http.Handler) http.Handler {
 		})
 
 		if err != nil {
-			response = u.Message(false, "Malformed authentication token")
+			response = u.Message(false, constants.TOKEN_INVALID)
 			w.WriteHeader(http.StatusForbidden)
 			w.Header().Add("Content-Type", "application/json")
 			u.Respond(w, response)
@@ -62,7 +70,7 @@ var JwtAuthentication = func(next http.Handler) http.Handler {
 		}
 
 		if !token.Valid {
-			response = u.Message(false, "Token is not valid.")
+			response = u.Message(false, constants.TOKEN_INVALID)
 			w.WriteHeader(http.StatusForbidden)
 			w.Header().Add("Content-Type", "application/json")
 			u.Respond(w, response)
