# server/schema/userFeedback.go
@@ -7,7 +7,9 @@ import (
 type UserFeedback struct {
 	gorm.Model
 	UserID      uint   `gorm:"null" json:"user_id"`
-	Description string `gorm:"unique" json:"description"`
-	Rating      uint   `gorm:"unique" json:"rating"`
+	Description string `gorm:"null" json:"description"`
+	Positives   string `gorm:"null" json:"positives"`
+	Negatives   string `gorm:"null" json:"negatives"`
+	Rating      float64   `gorm:"null" json:"rating"`
 	SurveyID    uint   `gorm:"null" json:"survey_id"`
 }
